Megapatch.  Fix everything that was annoying me about the service pane and search box.
* Bug 13092 - Creating a new playlist breaks service pane selection. Fixed WITHOUT regressing bug 13060.
* Bug 13190 – Selecting a service pane node triggers search tab to load 
* Bug 10742 – search service flickers when loading playlist after playlist 
* Bug 11367 – Quick search icon resets when switching views in menu 
* Bug 10720 – prepend search service in empty search box with "Search " 
* Bug 11959 – Do not fire search on search engine change
* Bug 11699 – [search] Search library from webpage tab does not switch tabs
* Bug 11701 – [download] Switch to Download Queue in web playlist does not bring web playlist to front 
* Bug 13216 – Search box no longer has a cancel button 
* Fixed some unfiled bugs to do with starting a library search and then switching media lists (did not update to reflect displayed list)

r=mook


git-svn-id: http://publicsvn.songbirdnest.com/client/trunk@11549 5aad4ff5-4b58-4159-ba3f-0e6328df4cad

--- a/feathers/gonzo/chrome/skin/images.css
+++ b/feathers/gonzo/chrome/skin/images.css
@@ -605,16 +605,15 @@ treechildren::-moz-tree-twisty(open) {
   list-style-image: url("chrome://songbird/skin/menu/dropmarker.png");
   border:none;
 }
-.searchbar-engine-button[addengines="true"] > stack > hbox > .searchbar-dropmarker-image {
+.searchbar-engine-button[addengines="true"] > .searchbar-dropmarker-image {
   list-style-image: url("chrome://songbird/skin/nav-bar/button-add-search-service.png");
 } 
 .searchbar-engine-button[addengines="true"] {
   background-image:url('chrome://songbird/skin/base-elements/bg-button-highlighted.png');
 }
-searchbar:not([empty="true"])[livesearchmode="true"] > .searchbar-box > .search-go-button-stack > .search-go-button {
+searchbar:not([empty="true"])[livesearchmode="true"] > .searchbar-textbox > .search-go-container > .search-go-button {
   list-style-image: url("chrome://songbird/skin/nav-bar/button-clear-search.png");
 }
-
 
 
 
